# qt-event-dispatcher-libuv

./: CMakeLists.txt  README.md
cmake/modules/: FindLibUV.cmake
features/: eventDispatcher.h
spec/: eventdispatcherlibuvSpec.cpp
src/: eventdispatcherlibuv.cpp  eventdispatcherlibuv.h  eventdispatcherlibuv_p.h
src/eventdispatcherlibuv/: async_channel.cpp  libuv_api.cpp  socket_notifier.cpp  time_tracker.cpp  timer_notifier.cpp
